--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
     <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1> <span class="name-hilit">Babu</span> Website</h1>
+            <h1> <span class="orange-hilit">Babu</span> Website</h1>
         <h3>world-class professional web devoloper</h3>
         <p> you might saw me jumping, climbing buildings, and stoping trains. But nobody pays me a dime for that work. That's why i'm learning and mastering web devolopment. I will not stop until I become the web Devolopment daimond</p>
         <a target="_blank" class="link-button" href="https://www.youtube.com/channel/UC54-cYESX--rjs5bLHsXMcg?sub_confirmation-1"> visit my youtube..</a>
     
     </div>
+
     <div class="half-width"><img src="images/babu.png" alt=""></div>
     <section class="dream-area">
         <div class="half-width">
             <img src="images/baba1.png" alt="">
         </div>
      <div class="half-width" >
-       
 <h2>Big Dream </h2>
 <h3>Become a num.1 devoloper</h3>
 <p>
@@ -37,11 +37,41 @@
 </a>
      </div>
     </section>
-   
+
+    <section class="experience-area">
+ 
+<div id="full-stack" class="half-width singal-experince">
+<h2>Full Stack Web Devoloper</h2>
+<h3 class="orange">2021 - Present | Pro Level Web Dev
+</h3>
+<p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+</div>
 
 
-
-
-
+<div id="baby-web" class="half-width singal-experince">
+<h2>Baby Web Developer</h2>
+<h3 class="orange">2020-2021 | Programming Hero Learner</h3>
+<p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+</div>
+</section>
+<footer>
+    <p class="no-text"> hi</p>\
+    <br>
+    <a class="link" target="_blank" href=" https://www.youtube.com/channel/UC54-cYESX--rjs5bLHsXMcg?sub_confirmation-1">my youtube  channel link :</a>
+    <p> 😻babu875, all right reserved😻</p>
+    <p>😻😻😻😻😻</p>
+</footer>
 </body>
 </html>
+
+
+
+
+ 
+
+
+
+
+
+
+
