--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </div>
 </section>
 <footer>
-    <p class="no-text"> hi</p>\
+    <p class="no-text"> hi</p>
     <br>
     <a class="link" target="_blank" href=" https://www.youtube.com/channel/UC54-cYESX--rjs5bLHsXMcg?sub_confirmation-1"> youtube  channel link :</a>
     <p> 😻babu875, all right reserved😻</p>
