--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=100%, initial-scale=1.0">
     <title>babu webdevoloper</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -21,7 +21,7 @@
     <div class="half-width"><img src="images/babu.png" alt=""></div>
     <section class="dream-area">
         <div class="half-width">
-            <img src="images/baba1.png" alt="">
+            <img id="imgb" src="images/baba1.png" alt="">
         </div>
      <div class="half-width" >
 <h2>Big Dream </h2>
